Automation to start/stop IspnPerf
* Create playbooks to run the script with any configuration on the agent
  nodes;
* Controller node needs manual intervention to start benchmark.